# freshman_final

./: .gitignore  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
docker/: docker-compose.yml
unit1/: main.ipynb  main.py
unit2/: main.py
unit3/: Crawler(find_all).ipynb
web/: index.html  style.css
